Removed the vh bug on mobile

--- a/chatapp/static/messages.css
+++ b/chatapp/static/messages.css
@@ -30,7 +30,8 @@ body {
 
 .message-container {
     display: flex;
-    height: 100vh;
+    min-height: 100vh;
+    min-height:-webkit-fill-available;
 }
 
 .status-bar {
